# SauceDemo

./: .gitignore  GEMINI.md  README.md  conftest.py  pyproject.toml  pytest.ini
artifacts/allure-report/: index.html
artifacts/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
artifacts/allure-report/data/attachments/: 97db854fcb51330b.txt
artifacts/allure-report/data/test-cases/: 3021f195a98b6b1a.json  d7b1906a4fef3435.json  dd86f027f630f292.json
artifacts/allure-report/export/: influxDbData.txt  prometheusData.txt
artifacts/allure-report/history/: history.json
artifacts/allure-report/widgets/: status-chart.json  summary.json
artifacts/allure-results/: 0861aa89-4d3d-47b1-bb6d-e92ecc77eb7b-container.json  3c788445-4e45-4508-8ab8-ae923b782196-container.json  4a0f944b-4805-4985-8a31-e4039ee78efa-result.json  5328c374-b8fe-4c9a-9465-ef54f4fa06ca-result.json  8dd9181a-27d2-473a-90de-a119b975bc2b-attachment.txt  b86c7f3b-7610-41fa-9666-75a47f32286c-result.json  e4546a80-787e-419d-ab93-9ef0b5cdfe96-container.json
pages/: CartPage.py  CheckoutPage.py  HomePage.py  LoginPage.py  ProductPage.py  ShippingPage.py  SuccessPage.py  login_page.py
tests/: test_cart.py  test_e2e_checkout.py  test_login.py  test_login_only.py  test_shipping_errors.py  test_sorting.py
utils/: logger.py
